syntax = "proto3";

import "google/protobuf/empty.proto";

package sashkir7.grpc;

option java_multiple_files = true;
option java_package = "sashkir7.grpc";
option java_outer_classname = "CommonProto";

message UsernameRequest {
  string username = 1;
}

message Country {
  string id = 1;
  string code = 2;
  string name = 3;
}
